# three_tier_thrift

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: jaeger-config.yml  paths.json  rpcs.json  services.json
config/backup/: rpcs.json  rpcs.json.backup  services.json  services.json.backup
config/netflix_oss/: paths.json  rpcs.json  services.json
docker/openresty-thrift/lua-thrift/: RpcClient.lua
gen-cpp/: service_10.cpp  service_10.h  service_10_server.skeleton.cpp  service_11.cpp  service_11.h  service_11_server.skeleton.cpp
gen-lua/: auto_microservices_service_10.lua  auto_microservices_service_11.lua
nginx-web-server/: jaeger-config.json
nginx-web-server/conf/: nginx.conf
nginx-web-server/lua-scripts/api/service_0/: rpc_0.lua
src/: CMakeLists.txt  ClientPool.h  GenericClient.h  ThriftClient.h  tracing.h
src/service_0/: CMakeLists.txt  service_0.cpp
src/service_1/: CMakeLists.txt  service_1.cpp
src/service_2/: CMakeLists.txt  service_2.cpp
src/service_3/: CMakeLists.txt  service_3.cpp
wrk2/: wrk
wrk2/src/: wrk.c
